change title <h2> in equipment-query.html to be simplicity.

--- a/app/view-equipment-q/equipment-query.html
+++ b/app/view-equipment-q/equipment-query.html
@@ -3,7 +3,7 @@
   
   <div class="grid_3 side_checkbox">
     
-      <h2 class="section_title">功能筛选</h2>
+      <h2 class="section_title">筛选</h2>
 
       <!-- 功能筛选1 check box for safety injection filtering-->
       <div class="query_control">
@@ -93,7 +93,7 @@
 
     <button ng-click="equipCtrl.reOrder([sortByLocalSys, sortByCategory])()">排序</button>
 
-    <h2 class="section_title">显示更多列</h2>
+    <h2 class="section_title">显示</h2>
     
     <!-- check box for dcs column show / hide -->
     <div class="query_control">
