--- a/app/view-equipment-q/equipment-query.html
+++ b/app/view-equipment-q/equipment-query.html
@@ -71,7 +71,7 @@
   
 
     <h2 class="section_title no_bottom_margin">排序</h2>
-    <p class="footnote">( 默认按机柜号排序 )</p>
+    <p class="footnote">默认按机柜号排序</p>
 
     <div class="query_control">
       <label for="sort_by_local_sys">选择三字码</label>
@@ -126,8 +126,8 @@
   
   <div class="grid_9 result_content">
 
-    <h2 class="section title">查询结果: <span ng-bind="filteredItems.length"></span>条 |
-                              总记录 <span ng-bind="equipCtrl.items.length"></span>条</h2>
+    <h2 clas条s="section title">查询结果: <span ng-bind="filteredItems.length"></span>条 |
+                  总记录 <span ng-bind="equipCtrl.items.length"></span>条</h2>
     <table class="query_table">
       <thead>
         <tr>
