--- a/app/view-equipment-q/equipment-query.html
+++ b/app/view-equipment-q/equipment-query.html
@@ -129,6 +129,8 @@
 
     <h2 clas条s="section title">查询结果: <span ng-bind="filteredItems.length"></span>条 |
                   总记录 <span ng-bind="equipCtrl.items.length"></span>条</h2>
+
+    {{equipCtrl.filterOptions[siChecked]}}
     <table class="query_table">
       <thead>
         <tr>
