--- a/app/view-doc-q/doc-q.html
+++ b/app/view-doc-q/doc-q.html
@@ -10,13 +10,29 @@
 
     <!-- 筛选1 选择适用文件 -->
     <div class="query_control">
-      <label>选择适用文件</label>
-      <select id="for-doc" ng-model="docq.selectedPlatform"
+      <label>选择适用平台</label>
+      <select ng-model="docq.selectedPlatform"
                            ng-options="c.platform as c.platform for c in docq.selectOptions['platform']">
       </select>
     </div>
 
-    <!-- 筛选2 模糊关键字 -->
+    <!-- 筛选2 选择适用文件 -->
+    <div class="query_control">
+      <label>选择适用文件</label>
+      <select ng-model="docq.selectedRefDoc"
+                           ng-options="c.refer_to as c.refer_to for c in docq.selectOptions['refer_to']">
+      </select>
+    </div>
+
+    <!-- 筛选3 选择文件类型 -->
+    <div class="query_control">
+      <label>选择文件类型</label>
+      <select ng-model="docq.selectedDocCat"
+                           ng-options="c.doc_category as c.doc_category for c in docq.selectOptions['doc_category']">
+      </select>
+    </div>
+
+    <!-- 筛选 模糊关键字 -->
     <label for="searchbox">使用模糊关键字</label>
     <input type="text" id="searchbox" ng-model="query">
 
@@ -38,6 +54,8 @@
       <tbody>
         <tr ng-repeat="item in filteredItems = (docq.items |
                                                 filter: docq.hardCodeFilter[docq.selectedPlatform] |
+                                                filter: docq.hardCodeFilter[docq.selectedRefDoc] |
+                                                filter: docq.hardCodeFilter[docq.selectedDocCat] |
                                                 filter: query)">
           <td>{{item.doc_name}}</td>
           <td>{{item.rev}}</td>
