add valid download button for doc-q view

--- a/app/view-doc-q/doc-q.html
+++ b/app/view-doc-q/doc-q.html
@@ -59,7 +59,7 @@
                                                 filter: docq.hardCodeFilter[docq.selectedDocCat] |
                                                 filter: query)">
 
-          <td><a href="">下载</a></td>
+                                                <td><a href="{{item.url}}">下载</a></td>
           <td>{{item.doc_name}}</td>
           <td>{{item.rev}}</td>
           <td>{{item.platform}}</td>
