--- a/app/view-doc-q/doc-q.html
+++ b/app/view-doc-q/doc-q.html
@@ -1,7 +1,7 @@
 <h1 class="main_title">五组标准化文档查询</h1>
-<div class="author_message">
-  {{docq.message}}
-</div>
+<!-- <div class="author_message"> -->
+<!--   {{docq.message}} -->
+<!-- </div> -->
 <div class="container_12 clearfix">
 
   <div class="grid_3 side_checkbox">
