--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <title>g5 app</title>
   <link rel="stylesheet" href="css/960_12_col.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="" href="./images/favicon.png">
+  <link rel="shortcut icon" href="./images/favicon.png">
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
