--- a/app/index.html
+++ b/app/index.html
@@ -20,14 +20,26 @@
     </div>
     <div class="nav" ng-controller="HeadController as headCtrl">
       <ul>
-        <li ng-class="{ active: headCtrl.isActive('/') }"><a href="#/">主  页</a></li>
-        <li ng-class="{ active: headCtrl.isActive('/about') }"><a href="#/about">本站介绍</a></li>
+        <li class="main-nav-list" ng-class="{ active: headCtrl.isActive('/') }"><a href="#/">主  页</a>
+          <ul class="sub-nav-list">
+            <li><a href="">功能介绍</a></li>
+            <li><a href="">开发信息</a></li>
+          </ul>
+        </li>
+        <li class="main-nav-list" ng-class="{ active: headCtrl.isActive('/about') }"><a href="#/about">R.P.S</a>
+          <ul class="sub-nav-list">
+            <li><a href="">Reactor Trip</a></li>
+            <li><a href="">ESF</a></li>
+          </ul>
+        </li>
         <li ng-class="{ active: headCtrl.isActive('/hardware-query') }"><a href="#/hardware-query">设备查询</a></li>
         <li ng-class="{ active: headCtrl.isActive('/doc-q') }"><a href="#/doc-q">文档查询</a></li>
         <li ng-class="{ active: headCtrl.isActive('/wiki') }"><a href="#/wiki">wiki</a></li>
       </ul>
     </div>
   </div>
-  <div ng-view></div>
+  <div class="container">
+    <div ng-view></div>
+  </div>
 </body>
 </html>
