add new view for acronym

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <script src="view-doc-q/doc-q-controller.js"></script>
   <script src="view-intro/introApp.js"></script>
   <script src="view-equipment-q/equipmentApp.js"></script>
+  <script src="view-acronym/acronym-controller.js"></script>
 </head>
 <body>
   <div class="header">
@@ -49,7 +50,7 @@
         <li class="main-nav-list" ng-class="{ active: headCtrl.isActive('/doc-q') }"><a href="">查询系统</a>
           <ul class="sub-nav-list">
             <li><a href="#/doc-q">工作文档</a></li>
-            <li><a href="">缩写查询</a></li>
+            <li><a href="#/acronym">术语查询</a></li>
           </ul>
         </li>
 
