--- a/app/view-equipment-q/equipment-query.html
+++ b/app/view-equipment-q/equipment-query.html
@@ -126,7 +126,7 @@
   
   <div class="grid_9 result_content">
 
-    <h2 clas条s="section title">查询结果: <span ng-bind="filteredItems.length"></span>条 |
+    <h2 class="section title">查询结果: <span ng-bind="filteredItems.length"></span>条 |
                   总记录 <span ng-bind="equipCtrl.items.length"></span>条</h2>
 
     <table class="query_table">
