add new view tools

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   <script src="view-intro/introApp.js"></script>
   <script src="view-equipment-q/equipmentApp.js"></script>
   <script src="view-acronym/acronym-controller.js"></script>
+  <script src="view-tools/tools-controller.js"></script>
 </head>
 <body>
   <div class="header">
@@ -51,6 +52,7 @@
           <ul class="sub-nav-list">
             <li><a href="#/doc-q">工作文档</a></li>
             <li><a href="#/acronym">术语查询</a></li>
+            <li><a href="#/tools">软件工具</a></li>
           </ul>
         </li>
 
