--- a/app/view-acronym/acronym.html
+++ b/app/view-acronym/acronym.html
@@ -3,7 +3,7 @@
 <div class="container_12 clearfix">
   <div class="page-note">
     <p>本页可以检索二字码、三字码、术语、各种专用英文词汇等。 <br />
-      如果有好的词库扩展建议，请
+      如果有任何的词库扩展建议，请
       <a href="mailto:churui.ctecdcs.net">发内邮联系我</a>。谢谢。
     </p>
   </div>
