--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="./app.js"></script>
+  <script src="./view-howto/howto-controller.js"></script>
   <script src="./view-doc-q/doc-q-controller.js"></script>
   <script src="./view-main/main-controller.js"></script>
   <script src="./view-equipment-q/equipmentApp.js"></script>
