change style for link on main page

--- a/app/view-main/main.html
+++ b/app/view-main/main.html
@@ -26,7 +26,7 @@
 
 </div>
 
-<div class="main-page-button">
-  <button>如何使用</button>
+<div class="main-anchor">
+  <a href="#/howto">查看如何使用</a>
 </div>
 
