add tools into tool-list.json

--- a/app/view-tools/tools.html
+++ b/app/view-tools/tools.html
@@ -43,7 +43,7 @@
 
           <td><a href="{{item.url}}">{{item.tool}}</a></td>
           <td>{{item.lastest_ver}}</td>
-          <td>{{item.function_description}}</td>
+          <td class="lg_tab_col">{{item.function_description}}</td>
           <td>{{item.developer}}</td>
 
         </tr>
