--- a/app/view-dcs-component/dcscomp.html
+++ b/app/view-dcs-component/dcscomp.html
@@ -8,7 +8,7 @@
 
     <h2 class="section_title">筛选</h2>
 
-    <!-- 筛选1 选择适用文件 -->
+    <!-- 筛选1 选择适用平台 -->
     <div class="query_control">
       <label>选择适用平台</label>
       <select class="long_input_bar" ng-model="compCtrl.selectedPlatform"
@@ -16,19 +16,11 @@
       </select>
     </div>
 
-    <!-- 筛选2 选择适用文件 -->
+    <!-- 筛选1 选择硬件类型 -->
     <div class="query_control">
-      <label>选择适用文件</label>
-      <select class="long_input_bar" ng-model="compCtrl.selectedRefDoc"
-                           ng-options="c.refer_to as c.refer_to for c in compCtrl.selectOptions['refer_to']">
-      </select>
-    </div>
-
-    <!-- 筛选3 选择文件类型 -->
-    <div class="query_control">
-      <label>选择文件类型</label>
-      <select class="long_input_bar" ng-model="compCtrl.selectedDocCat"
-                           ng-options="c.doc_category as c.doc_category for c in compCtrl.selectOptions['doc_category']">
+      <label>选择常用类型</label>
+      <select class="long_input_bar" ng-model="compCtrl.selectedName"
+                           ng-options="c.name as c.name for c in compCtrl.selectOptions['name']">
       </select>
     </div>
 
@@ -45,25 +37,26 @@
     <table class="query_table">
       <thead>
         <tr>
-          <th scope="col" class="md_tab_col">Download</th>
-          <th scope="col" class="lg_tab_col">文件名称</th>
-          <th scope="col" class="md_tab_col">文件版本</th>
-          <th scope="col" class="md_tab_col">适用平台</th>
-          <!-- <th scope="col" class="lg_tab_col">文件描述</th> -->
+          <th scope="col" class="md_tab_col">型号</th>
+          <th scope="col" class="md_tab_col">类型</th>
+          <th scope="col" class="md_tab_col">功能</th>
+          <th scope="col" class="md_tab_col">规格</th>
+          <th scope="col" class="md_tab_col">平台</th>
+          <th scope="col" class="md_tab_col">系统</th>
         </tr>
       </thead>
       <tbody>
         <tr ng-repeat="item in filteredItems = (compCtrl.items |
                                                 filter: compCtrl.hardCodeFilter[compCtrl.selectedPlatform] |
-                                                filter: compCtrl.hardCodeFilter[compCtrl.selectedRefDoc] |
-                                                filter: compCtrl.hardCodeFilter[compCtrl.selectedDocCat] |
+                                                filter: compCtrl.hardCodeFilter[compCtrl.selectedName] |
                                                 filter: query)">
 
-          <td><a href="{{item.url}}" target="_blank">下载</a></td>
-          <td>{{item.doc_name}}</td>
-          <td>{{item.rev}}</td>
+          <td>{{item.module}}</td>
+          <td>{{item.name}}</td>
+          <td>{{item.feature}}</td>
+          <td>{{item.specification}}</td>
           <td>{{item.platform}}</td>
-          <!-- <td>{{item.description}}</td> -->
+          <td>{{item.usage}}</td>
         </tr>
       </tbody>
     </table>
