update component list

--- a/app/view-dcs-component/dcscomp.html
+++ b/app/view-dcs-component/dcscomp.html
@@ -39,8 +39,8 @@
         <tr>
           <th scope="col" class="md_tab_col">型号</th>
           <th scope="col" class="md_tab_col">类型</th>
-          <th scope="col" class="md_tab_col">功能</th>
-          <th scope="col" class="md_tab_col">规格</th>
+          <th scope="col" class="lg_tab_col">功能</th>
+          <th scope="col" class="lg_tab_col">规格</th>
           <th scope="col" class="md_tab_col">平台</th>
           <th scope="col" class="md_tab_col">系统</th>
         </tr>
