update acronym data and view

--- a/app/view-acronym/acronym.html
+++ b/app/view-acronym/acronym.html
@@ -31,6 +31,7 @@
         <tr>
           <th scope="col" class="md_tab_col">关键字</th>
           <th scope="col" class="lg_tab_col">全称</th>
+          <th scope="col" class="md_tab_col">来源</th>
           <!-- <th scope="col" class="lg_tab_col">文件描述</th> -->
         </tr>
       </thead>
@@ -39,6 +40,7 @@
 
           <td>{{item.code}}</td>
           <td>{{item.designation}}</td>
+          <td>{{item.origin}}</td>
 
         </tr>
       </tbody>
