udate equipment query view

--- a/app/view-equipment-q/equipment-query.html
+++ b/app/view-equipment-q/equipment-query.html
@@ -91,7 +91,7 @@
              ng-false-value="''">
     </div>
 
-    <button ng-click="equipCtrl.reOrder([sortByLocalSys, sortByCategory])()">排序</button>
+    <button class="btn btn-sm btn-primary" ng-click="equipCtrl.reOrder([sortByLocalSys, sortByCategory])()">排序</button>
 
     <h2 class="section_title">显示</h2>
     
