chore:add link of bootstrap but commented

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>TEAM</title>
   <link rel="stylesheet" href="css/960_12_col.css">
+  <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="shortcut icon" href="./images/favicon.png">
   <script src="bower_components/angular/angular.min.js"></script>
