feat: edit index.html to include bootstrap and jquery

--- a/app/index.html
+++ b/app/index.html
@@ -3,22 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>TEAM</title>
-  <link rel="stylesheet" href="css/960_12_col.css">
-  <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+  <!-- <link rel="stylesheet" href="css/960_12_col.css"> -->
+  <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="shortcut icon" href="./images/favicon.png">
-  <script src="bower_components/angular/angular.min.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="./app.js"></script>
-  <script src="./view-howto/howto-controller.js"></script>
-  <script src="./view-dev/dev-controller.js"></script>
-  <script src="./view-doc-q/doc-q-controller.js"></script>
-  <script src="./view-main/main-controller.js"></script>
-  <script src="./view-equipment-q/equipmentApp.js"></script>
-  <script src="./view-acronym/acronym-controller.js"></script>
-  <script src="./view-tools/tools-controller.js"></script>
-  <script src="./view-reactor_trip/rt_controller.js"></script>
-  <script src="./view-dcs-component/dcs-comp-controller.js"></script>
 </head>
 <body>
   <div class="header">
@@ -72,5 +60,20 @@
   <div class="container">
     <div ng-view></div>
   </div>
+
+  <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="./app.js"></script>
+  <script src="./view-howto/howto-controller.js"></script>
+  <script src="./view-dev/dev-controller.js"></script>
+  <script src="./view-doc-q/doc-q-controller.js"></script>
+  <script src="./view-main/main-controller.js"></script>
+  <script src="./view-equipment-q/equipmentApp.js"></script>
+  <script src="./view-acronym/acronym-controller.js"></script>
+  <script src="./view-tools/tools-controller.js"></script>
+  <script src="./view-reactor_trip/rt_controller.js"></script>
+  <script src="./view-dcs-component/dcs-comp-controller.js"></script>
 </body>
 </html>
