--- a/app/index.html
+++ b/app/index.html
@@ -5,58 +5,72 @@
   <title>TEAM</title>
   <!-- <link rel="stylesheet" href="css/960_12_col.css"> -->
   <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <!-- <link rel="stylesheet" href="css/main.css"> -->
   <link rel="shortcut icon" href="./images/favicon.png">
 </head>
 <body>
-  <div class="header">
-    <div class="logo">
-      <a href="#/">
-        <img src="images/logo.png" alt="">
-      </a>
-    </div>
-    <div class="nav" ng-controller="HeadController as headCtrl">
-      <ul>
+  <nav class="navbar navbar-inverse">
 
+    <div class="container-fluid">  <!-- header, bootstrap container-->
 
-        <!-- manual - R.P.S -->
-        <li class="main-nav-list" ng-class="{ active: headCtrl.isActive('/hardware-query') }"><a href="">R.P.S</a>
-          <ul class="sub-nav-list">
+      <div class="navbar-header">
+          <a class="active navbar-brand" href="#/">T.E.A.M</a>
+      </div>
+
+      <ul class="nav navbar-nav">
+
+        <!-- bootstrap dropdown - R.P.S -->
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown"
+             href="">R.P.S <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
             <li><a href="#/reactor_trip">Reactor Protection</a></li>
             <li><a href="#/hardware-query">ESF</a></li>
           </ul>
-        </li>
+        </li>  
 
-        <!-- manual D.C.S -->
-        <li class="main-nav-list" ng-class="{ active: headCtrl.isActive('/none') }"><a href="">D.C.S</a>
-          <ul class="sub-nav-list">
+        <!-- bootstrap dropdown D.C.S -->
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown"
+             href="">D.C.S <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
             <li><a href="#/dcs_component">硬件信息</a></li>
             <li><a href="">平台维护</a></li>
           </ul>
         </li>
 
-        <!-- manual 查询系统 -->
-        <li class="main-nav-list" ng-class="{ active: headCtrl.isActive('/doc-q') }"><a href="">查询系统</a>
-          <ul class="sub-nav-list">
+        <!-- bootstrap dropdown 查询系统 -->
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" 
+             href="">查询系统 <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
             <li><a href="#/doc-q">工作文档</a></li>
             <li><a href="#/acronym">术语查询</a></li>
             <li><a href="#/tools">软件工具</a></li>
           </ul>
         </li>
 
-        <!-- manual - 使用指南 -->
-        <li class="main-nav-list" ng-class="{ active: headCtrl.isActive('/') }"><a href="">使用指南</a>
-          <ul class="sub-nav-list">
+        <!-- bootstrap dropdown 使用指南 -->
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" 
+             href="">使用指南 <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
             <li><a href="#/howto">功能介绍</a></li>
             <li><a href="#/dev">开发信息</a></li>
           </ul>
-          </li> 
+        </li> 
 
-        <!-- manual wiki -->
-        <li class="main-nav-list" ng-class="{ active: headCtrl.isActive('/wiki') }"><a href="#/wiki">wiki</a></li>
+        <!-- bootstrap dropdown wiki -->
+        <li><a href="#/wiki">wiki</a></li>
       </ul>
-    </div>
-  </div>
+
+    </div>  <!-- .container-fluid -->
+  </nav> <!-- nav .navbar -->
+
   <div class="container">
     <div ng-view></div>
   </div>
