--- a/app/view-main/main.html
+++ b/app/view-main/main.html
@@ -1,31 +1,27 @@
-<div class="main-page-container">
-  <div class=main-page-feature>
-    <h1>使信息相互关联，让资源垂手可得</h1>
+<div class="jumbotron">
+  <h1>使信息相互关联，让资源垂手可得</h1>
+  
+  
+  <div class="float-elem">
+    <h1 class="main_title">T</h1>
+    <span class="slogan">Together</span>
+  </div>
+
+  <div class="float-elem">
+    <h1 class="main_title">E</h1>
+    <span class="slogan">Everything</span>
+  </div>
+
+  <div class="float-elem">
+    <h1 class="main_title">A</h1>
+    <span class="slogan">Achieve</span>
+  </div>
+
+  <div class="float-elem">
+    <h1 class="main_title">M</h1>
+    <span class="slogan">More</span>
   </div>
   
-  <div class="flex-box">
-  
-    <div class="float-elem">
-      <h1 class="main_title">T</h1>
-      <span class="slogan">Together</span>
-    </div>
-  
-    <div class="float-elem">
-      <h1 class="main_title">E</h1>
-      <span class="slogan">Everything</span>
-    </div>
-  
-    <div class="float-elem">
-      <h1 class="main_title">A</h1>
-      <span class="slogan">Achieve</span>
-    </div>
-  
-    <div class="float-elem">
-      <h1 class="main_title">M</h1>
-      <span class="slogan">More</span>
-    </div>
-  
-  </div>
   
   <div class="main-anchor">
     <a href="#/howto">查看如何使用</a>
