style: update style for main page view

--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <title>TEAM</title>
   <!-- <link rel="stylesheet" href="css/960_12_col.css"> -->
-  <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href="css/main.css"> -->
   <link rel="shortcut icon" href="./images/favicon.png">
+  <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <nav class="navbar navbar-inverse">
