style: fix the nav bar at top, add padding to body

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
 
     <div class="container-fluid">  <!-- header, bootstrap container-->
 
@@ -72,7 +72,7 @@
     </div>  <!-- .container-fluid -->
   </nav> <!-- nav .navbar -->
 
-  <div ng-view></div>
+    <div ng-view></div>
 
   <script src="./bower_components/jquery/dist/jquery.min.js"></script>
   <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
