--- a/app/view-acronym/acronym.html
+++ b/app/view-acronym/acronym.html
@@ -14,29 +14,29 @@
   <div class="row">
 
     <!-- narrow column -->
-    <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 no-padding-left">
-      <h2 class="section_title">筛选</h2>
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 no-padding-left">
+      <h2>筛选</h2>
 
       <!-- 筛选 指定码精确查找 -->
       <label for="searchbox">根据关键字检索</label>
-      <input class="long_input_bar" type="text" id="searchbox" ng-model="speciCode">
+      <input class="form-control" type="text" id="searchbox" ng-model="speciCode">
 
       <!-- 筛选 模糊关键字 -->
       <label for="searchbox">模糊检索</label>
-      <input class="long_input_bar" type="text" id="searchbox" ng-model="query">
+      <input class="form-control" type="text" id="searchbox" ng-model="query">
 
     </div>  <!-- end narrow column -->
 
     <!-- wide column -->
-    <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
+    <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
 
-      <h2 class="section title">检索结果</h2>
+      <h2>检索结果</h2>
       <table class="table table-bordered table-hover table-striped">
         <thead>
           <tr>
-            <th scope="col" class="md_tab_col">关键字</th>
-            <th scope="col" class="lg_tab_col">全称</th>
-            <th scope="col" class="md_tab_col">来源</th>
+            <th scope="col">关键字</th>
+            <th scope="col">全称</th>
+            <th scope="col">来源</th>
             <!-- <th scope="col" class="lg_tab_col">文件描述</th> -->
           </tr>
         </thead>
